Don't zoom in on mobile when focusing on an input. Don't let white be the auto-generated color for a new group. Fix small bugs with touch scrolling/swiping on mobile. Fix styling bug in item view dialog where not all groups are shown if there are too many to show on one line

--- a/frontend/src/app/components/item-view-dialog/item-view-dialog.component.scss
+++ b/frontend/src/app/components/item-view-dialog/item-view-dialog.component.scss
@@ -57,11 +57,12 @@
 
 .item-view-groups {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   margin-top: 5px;
 
   app-group-name-chip {
-    margin-right: 5px;
+    margin: 0 5px 5px 0;
   }
 }
 
